overflow fixed

--- a/app/sass/footer.sass
+++ b/app/sass/footer.sass
@@ -5,4 +5,9 @@
     color: #8F9399
     font-size: 13px
     &-copyright
+        max-width: 100px
+        width: 100px
+        max-height: 15px
+        height: 15px
+        overflow: hidden
         margin-top: 25px
