--- a/app/sass/rating-menu.sass
+++ b/app/sass/rating-menu.sass
@@ -29,12 +29,11 @@
                 font-weight: normal
                 line-height: 42px
     &-choose
-        height: 60px
-        max-height: 60px
-        overflow: hidden
-        z-index: 2
+        height: 61px
+        max-height: 61px
+        overflow-y: hidden
         @media #{$breakpoint-xs-only}
-            height: 49px
+            height: 50px
         margin: 0 auto
         border-bottom: 1px solid #D1DBD6
         @media #{$breakpoint-lg-only} 
@@ -46,7 +45,7 @@
         & > *
             min-width: 100px
             max-width: 200px
-            margin-right: 30px
+            margin-right: 20px
             padding: 0
             border: none
             display: block
