--- a/app/sass/rating.sass
+++ b/app/sass/rating.sass
@@ -37,6 +37,7 @@
                     font-size: 13px
                     padding-top: 18px
                     @media #{$breakpoint-xs-only}
+                        max-height: 30px
                         padding-top: 10px
                 &-place
                     max-width: 100%
